# LLM_synthetic_plm

./: .gitignore  README.md  pyproject.toml  requirements.txt
modules/: data_loader.py  excel_llm_cleaning.py  excel_llm_cleaning_plan.txt  tokenizer.py
notebooks/: data_loader_test.ipynb
